--- a/1/admissions.html
+++ b/1/admissions.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>大学校园官网 - 招生信息</title>
+    <link rel="icon" href="img/1.png" type="image/png">
     <link rel="stylesheet" href="css/style.css">
     <style>
         /* 通用字体和背景设置 */
