--- a/1/campus-life.html
+++ b/1/campus-life.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>大学校园官网 - 校园生活</title>
+    <link rel="icon" href="img/1.png" type="image/png">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
