--- a/1/news1.html
+++ b/1/news1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>一带一路：全球合作与文化交流</title>
+    <link rel="icon" href="img/1.png" type="image/png">
     <style>
         body {
             font-family: Arial, sans-serif;
