--- a/1/news2.html
+++ b/1/news2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>校园设施升级：提升教育质量与学习环境</title>
+    <link rel="icon" href="img/1.png" type="image/png">
     <style>
         body {
             font-family: Arial, sans-serif;
