--- a/1/contact.html
+++ b/1/contact.html
@@ -21,7 +21,12 @@
             background-color: #004b87;
             color: white;
             padding: 15px 0;
-            position: relative;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            z-index: 1000; /* 保证 header 在最上层 */
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 使 header 更有层次感 */
         }
 
         header .logo {
@@ -49,7 +54,7 @@
         /* 页面主要内容区域 */
         .main-content {
             max-width: 900px;
-            margin: 30px auto;
+            margin: 90px auto 30px; /* 调整为避免 header 遮挡内容 */
             background-color: white;
             padding: 30px;
             border-radius: 8px;
@@ -130,7 +135,8 @@
             color: white;
             text-align: center;
             padding: 15px 0;
-            margin-top: 40px;
+            width: 100%;  /* 使 footer 占满屏幕 */
+            margin: 0;
         }
 
         footer p {
@@ -161,6 +167,10 @@
                 display: inline-block;
                 margin: 5px;
                 font-size: 14px;
+            }
+
+            footer p {
+                font-size: 12px;
             }
         }
 
