--- a/1/contact.html
+++ b/1/contact.html
@@ -20,7 +20,7 @@
         header {
             background-color: #004b87;
             color: white;
-            padding: 15px 0;
+            padding: 10px 20px;
             position: fixed;
             top: 0;
             left: 0;
@@ -247,9 +247,9 @@
         <div class="logo">校园官网</div>
         <nav>
             <a href="index.html">首页</a>
-            <a href="departments.html">院系与课程</a>
-            <a href="admissions.html">招生信息</a>
+            <a href="about.html">学校概况</a>
             <a href="campus-life.html">校园生活</a>
+            <a href="admissions.html">招生信息</a>
             <a href="contact.html">联系我们</a>
         </nav>
     </header>
