--- a/1/campus-life.html
+++ b/1/campus-life.html
@@ -13,9 +13,9 @@
         <div class="logo">校园官网</div>
         <nav>
             <a href="index.html">首页</a>
-            <a href="departments.html">院系与课程</a>
-            <a href="admissions.html">招生信息</a>
+            <a href="about.html">学校概况</a>
             <a href="campus-life.html">校园生活</a>
+            <a href="admissions.html">招生信息</a>
             <a href="contact.html">联系我们</a>
         </nav>
     </header>
