--- a/1/about.html
+++ b/1/about.html
@@ -49,7 +49,8 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.6);
+            background: linear-gradient(rgba(128, 128, 128, 0.5), rgba(128, 128, 128, 0.5)), 
+                        url('img/about/curtain.jpg') center/cover no-repeat;
             z-index: 0; /* 确保在内容和页眉、页脚下方 */
         }
 
