--- a/1/about.html
+++ b/1/about.html
@@ -20,11 +20,11 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            position: fixed; /* 固定在页面顶部 */
+            position: fixed;
             top: 0;
             left: 0;
             width: 100%;
-            z-index: 2; /* 确保位于幕布上方 */
+            z-index: 2;
         }
 
         .logo {
@@ -51,13 +51,13 @@
             height: 100%;
             background: linear-gradient(rgba(128, 128, 128, 0.5), rgba(128, 128, 128, 0.5)), 
                         url('img/about/curtain.jpg') center/cover no-repeat;
-            z-index: 0; /* 确保在内容和页眉、页脚下方 */
+            z-index: 0;
         }
 
         .main-content {
             position: relative;
             z-index: 1;
-            padding: 100px 20px 50px; /* 调整顶部留白以适应固定的导航栏 */
+            padding: 100px 20px 50px;
         }
 
         .main-content h1 {
@@ -78,10 +78,28 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             max-width: 1000px;
             margin: 40px auto;
+            opacity: 0; /* Initially invisible */
+            transition: transform 1s, opacity 1s;
+        }
+
+        /* 奇数板块从左侧飞入 */
+        .section:nth-child(odd) {
+            transform: translateX(-100%); /* 初始位置从左侧 */
+        }
+
+        /* 偶数板块从右侧飞入 */
+        .section:nth-child(even) {
+            transform: translateX(100%); /* 初始位置从右侧 */
+        }
+
+        /* 启动动画时的样式 */
+        .section.visible {
+            opacity: 1;
+            transform: translateX(0); /* 移动到正常位置 */
         }
 
         .section:nth-child(even) {
-            flex-direction: row-reverse;
+            flex-direction: row-reverse; /* 偶数板块图片和文字位置交换 */
         }
 
         .section h2 {
@@ -95,6 +113,14 @@
             line-height: 1.6;
             font-size: 1.2em;
             margin-right: 20px;
+        }
+
+        .section div {
+            margin-left: 20px;
+        }
+
+        .section:nth-child(even) div {
+            margin-right: 60px;
         }
 
         .section img {
@@ -111,16 +137,15 @@
             background: #004b87;
             color: #fff;
             margin-top: 50px;
-            position: relative; /* 默认流定位，确保在幕布上方 */
+            position: relative;
             z-index: 1;
         }
+
     </style>
 </head>
 <body>
-    <!-- 半透明幕布 -->
     <div class="overlay"></div>
 
-    <!-- 导航栏 -->
     <header>
         <div class="logo">校园官网</div>
         <nav>
@@ -132,50 +157,68 @@
         </nav>
     </header>
 
-    <!-- 学校概况 -->
     <section class="main-content">
         <h1>学校概况</h1>
 
-        <!-- 板块 1 -->
         <div class="section">
+            <img src="img/about/history.jpg" alt="悠久历史">
             <div>
                 <h2>悠久历史</h2>
                 <p>我们学校创建于1924年，至今已有百年历史。早期仅有数个学科，如今已发展为综合性大学，涵盖理、工、文、医、艺术等多个领域。学校秉承“明德博学，笃行致远”的校训，培养了数以万计的优秀校友，为社会做出了巨大贡献。</p>
             </div>
-            <img src="img/about/history.jpg" alt="悠久历史">
         </div>
 
-        <!-- 板块 2 -->
         <div class="section">
+            <img src="img/about/education.jpg" alt="多元化教育">
             <div>
                 <h2>多元化教育</h2>
                 <p>学校致力于提供多元化教育，拥有60多个本科专业、40多个硕士点以及20多个博士点。课程设计注重理论与实践结合，通过学术研究、社会实践及国际交流，帮助学生全面提升知识储备和实践能力。</p>
             </div>
-            <img src="img/about/education.jpg" alt="多元化教育">
         </div>
 
-        <!-- 板块 3 -->
         <div class="section">
+            <img src="img/about/facilities.jpg" alt="世界一流设施">
             <div>
                 <h2>世界一流设施</h2>
                 <p>学校配备了世界一流的教学和科研设施，包括智能化图书馆、高性能计算机中心、国际标准实验室等。美丽的校园环境为学生提供了良好的学习氛围，校内体育馆、剧场和多功能活动中心也成为学生课余生活的重要组成部分。</p>
             </div>
-            <img src="img/about/facilities.jpg" alt="世界一流设施">
         </div>
 
-        <!-- 板块 4 -->
         <div class="section">
+            <img src="img/about/international.jpg" alt="国际化合作">
             <div>
                 <h2>国际化合作</h2>
                 <p>学校积极推进国际化战略，与全球100多所知名大学和科研机构建立合作伙伴关系，提供交换项目、联合研究及海外实习机会。每年有超过500名学生参与海外交流，为他们未来的职业发展和全球化视野打下坚实基础。</p>
             </div>
-            <img src="img/about/international.jpg" alt="国际化合作">
         </div>
     </section>
 
-    <!-- 页脚 -->
     <footer>
         <p>&copy; 2024 大学校园官网. 保留所有权利.</p>
     </footer>
+
+    <script>
+        // 获取所有的 section 元素
+        const sections = document.querySelectorAll('.section');
+
+        // 检测是否进入视口的函数
+        function checkVisibility() {
+            const viewportHeight = window.innerHeight;
+
+            sections.forEach(section => {
+                const sectionTop = section.getBoundingClientRect().top;
+                if (sectionTop <= viewportHeight * 0.8) {
+                    section.classList.add('visible');
+                }
+            });
+        }
+
+        // 监听滚动事件
+        window.addEventListener('scroll', checkVisibility);
+
+        // 页面加载时先检查一次
+        checkVisibility();
+    </script>
+
 </body>
 </html>
