--- a/1/about.html
+++ b/1/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>大学校园官网 - 学校概况</title>
+    <title>墨林大学官网 - 学校概况</title>
     <link rel="icon" href="img/1.png" type="image/png">
     <style>
         body {
@@ -147,7 +147,7 @@
     <div class="overlay"></div>
 
     <header>
-        <div class="logo">校园官网</div>
+        <div class="logo">墨林大学</div>
         <nav>
             <a href="index.html">首页</a>
             <a href="about.html">学校概况</a>
@@ -194,17 +194,15 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 大学校园官网. 保留所有权利.</p>
+        <p>&copy; 2024 墨林大学官网. 保留所有权利.</p>
     </footer>
 
     <script>
         // 获取所有的 section 元素
         const sections = document.querySelectorAll('.section');
-
         // 检测是否进入视口的函数
         function checkVisibility() {
             const viewportHeight = window.innerHeight;
-
             sections.forEach(section => {
                 const sectionTop = section.getBoundingClientRect().top;
                 if (sectionTop <= viewportHeight * 0.8) {
@@ -212,13 +210,10 @@
                 }
             });
         }
-
         // 监听滚动事件
         window.addEventListener('scroll', checkVisibility);
-
         // 页面加载时先检查一次
         checkVisibility();
     </script>
-
 </body>
 </html>
