--- a/1/contact.html
+++ b/1/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>大学校园官网 - 联系我们</title>
+    <title>墨林大学官网 - 联系我们</title>
     <link rel="icon" href="img/1.png" type="image/png">
     <link rel="stylesheet" href="css/style.css">
     <style>
@@ -148,7 +148,7 @@
 <body>
     <!-- 导航栏 -->
     <header>
-        <div class="logo">校园官网</div>
+        <div class="logo">墨林大学</div>
         <nav>
             <a href="index.html">首页</a>
             <a href="about.html">学校概况</a>
@@ -185,7 +185,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 大学校园官网. 保留所有权利.</p>
+        <p>&copy; 2024 墨林大学官网. 保留所有权利.</p>
     </footer>
 
     <script>
