--- a/1/index.html
+++ b/1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>大学校园官网 - 首页</title>
+    <title>墨林大学官网 - 首页</title>
     <link rel="icon" href="img/1.png" type="image/png">
     <!-- 引入Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
@@ -12,7 +12,7 @@
 <body>
     <!-- 导航栏 -->
     <header>
-        <div class="logo">校园官网</div>
+        <div class="logo">墨林大学</div>
         <nav>
             <a href="index.html">首页</a>
             <a href="about.html">学校概况</a>
@@ -26,7 +26,7 @@
     <section class="main-content">
         <!-- 上方文字 -->
         <div class="overlay-text">
-            <h1>欢迎来到我们的大学校园</h1>
+            <h1>欢迎来到墨林大学</h1>
             <p>了解最新资讯，探索丰富的学习资源。</p>
         </div>
 
@@ -94,7 +94,7 @@
 
     <!-- 底部 -->
     <footer>
-        <p>&copy; 2024 大学校园官网. 保留所有权利.</p>
+        <p>&copy; 2024 墨林大学官网. 保留所有权利.</p>
     </footer>
 
     <!-- 引入jQuery、Popper.js 和 Bootstrap JS -->
