--- a/1/admissions.html
+++ b/1/admissions.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>大学校园官网 - 招生信息</title>
+    <title>墨林大学官网 - 招生信息</title>
     <link rel="icon" href="img/1.png" type="image/png">
     <link rel="stylesheet" href="css/style.css">
     <style>
@@ -14,6 +14,7 @@
             color: #333;
             margin: 0;
             padding: 0;
+            overflow-x: hidden;
         }
 
         /* 固定导航栏样式 */
@@ -56,15 +57,18 @@
         /* 招生信息内容 */
         .main-content {
             padding: 30px;
-            max-width: 90%; /* 使用百分比宽度，适应不同屏幕 */
+            max-width: 90%;
             margin: 30px auto;
             background-color: white;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            opacity: 0;
+            transform: translateY(20px);
+            transition: opacity 0.5s ease-out, transform 0.5s ease-out;
         }
 
         .main-content h1 {
-            font-size: 2rem; /* 响应式字体大小 */
+            font-size: 2rem;
             color: #004b87;
             text-align: center;
             margin-bottom: 20px;
@@ -72,7 +76,7 @@
         }
 
         .main-content p {
-            font-size: 1rem; /* 响应式字体大小 */
+            font-size: 1rem;
             line-height: 1.8;
             color: #555;
             margin-bottom: 15px;
@@ -80,13 +84,13 @@
         }
 
         .main-content h2 {
-            font-size: 1.5rem; /* 响应式字体大小 */
+            font-size: 1.5rem;
             color: #004b87;
             margin-top: 30px;
             font-weight: 600;
         }
 
-        /* 固定底部样式 */
+        /* 底部样式 */
         footer {
             text-align: center;
             padding: 15px;
@@ -94,12 +98,18 @@
             color: white;
             margin-top: 30px;
         }
+
+        /* 动态显示类 */
+        .visible {
+            opacity: 1;
+            transform: translateY(0);
+        }
     </style>
 </head>
 <body>
     <!-- 导航栏 -->
     <header>
-        <div class="logo">校园官网</div>
+        <div class="logo">墨林大学</div>
         <nav>
             <a href="index.html">首页</a>
             <a href="about.html">学校概况</a>
@@ -133,7 +143,29 @@
 
     <!-- 底部 -->
     <footer>
-        <p>&copy; 2024 大学校园官网. 保留所有权利.</p>
+        <p>&copy; 2024 墨林大学官网. 保留所有权利.</p>
     </footer>
+
+    <script>
+        // 使用 IntersectionObserver 监听滚动到的元素
+        const observerOptions = {
+            root: null, // 视口为根元素
+            threshold: 0.35 // 元素至少一半进入视口时触发
+        };
+
+        const mainContent = document.querySelector('.main-content');
+
+        const observerCallback = (entries, observer) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.classList.add('visible'); // 元素进入视口时添加可见效果
+                    observer.unobserve(entry.target); // 观察到后就停止监听
+                }
+            });
+        };
+
+        const observer = new IntersectionObserver(observerCallback, observerOptions);
+        observer.observe(mainContent); // 开始监听
+    </script>
 </body>
 </html>
